<resources>
    <string name="app_name">Nosso Diário</string>
    <string name="email_support">ti.robetomartins@gmail.com</string>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>

    <string name="action_settings">Configurações</string>
    <string name="username">usuário</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="logout">Sair</string>
    <string name="name">Nome</string>
    <string name="age">Idade</string>
    <string name="register">Registrar</string>
    <string name="registerHere">Cadastre-se</string>

    <string name="desc_username">Digite o username</string>
    <string name="desc_password">Digite a Senha</string>
    <string name="desc_login">Digite o Login</string>
    <string name="desc_logout">Sair</string>
    <string name="desc_name">Digite o Nome</string>
    <string name="desc_age">Digite a Idade</string>

    <string name="string_import">Importar</string>
    <string name="gallery">Galeria</string>
    <string name="slideshow">Apresentação</string>
    <string name="tools">Ferramentas</string>
    <string name="communicate">Comunicação</string>
    <string name="share">Compartilhar</string>
    <string name="send">Enviar</string>

</resources>
